fix ag-grid theme and started upgrading apps with new theme modifs

--- a/fe/src/data-grid/data-grid.component.scss
+++ b/fe/src/data-grid/data-grid.component.scss
@@ -6,7 +6,10 @@
 
 @import "../../../node_modules/bootstrap/scss/bootstrap";
 @import "../../../node_modules/@ag-grid-community/core/dist/styles/ag-grid";
-@import "../../../node_modules/@ag-grid-community/core/dist/styles/ag-theme-balham-dark/sass/ag-theme-balham-dark-mixin";
+@import "../../../node_modules/@ag-grid-community/core/dist/styles/ag-theme-balham/sass/ag-theme-balham-mixin";
+.ag-theme-balham {
+  @include ag-theme-balham();
+}
 
 :host {
   min-width: 28vw;
