added html refactoring cli

--- a/themes/frmdb/_components.scss
+++ b/themes/frmdb/_components.scss
@@ -1,2 +1,20 @@
 @import "./components/cover";
 // @import "./components/cards";
+
+frmdb-t-aside,
+frmdb-t-card-action,
+frmdb-t-card-deck,
+frmdb-t-card-icon-main,
+frmdb-t-card-media-main,
+frmdb-t-card-note,
+frmdb-t-cover,
+frmdb-t-footer,
+frmdb-t-header,
+frmdb-t-img,
+frmdb-t-main,
+frmdb-t-main-nav,
+frmdb-t-media-section-main,
+frmdb-t-section-cards-icon,
+frmdb-t-section-divider {
+    display: block;
+}
