--- a/themes/frmdb/components/_cover.scss
+++ b/themes/frmdb/components/_cover.scss
@@ -1,5 +1,5 @@
-.frmdb-t-cover {
-    display: grid;
+frmdb-t-cover {
+    display: grid !important;
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr auto;
 
