--- a/themes/frmdb/_card.scss
+++ b/themes/frmdb/_card.scss
@@ -35,7 +35,7 @@ $cards-per-line-5: (xs: 1, sm: 2, md: 3, lg: 4, xl: 5);
     }
 }
 
-.frmdb-t-card-media-main {
+frmdb-t-card-media-main {
     display: grid;
     grid-template-columns: 1fr;
 
@@ -49,7 +49,7 @@ $cards-per-line-5: (xs: 1, sm: 2, md: 3, lg: 4, xl: 5);
         grid-column: 1 / span 1;
     }
 
-    .frmdb-t-img {
+    frmdb-t-img {
         height: 15rem;
     }
 }
