--- a/fe/src/frmdb-editor/add-element.component.html
+++ b/fe/src/frmdb-editor/add-element.component.html
@@ -14,7 +14,7 @@
 
                         </div>
                         <div class="col-10">
-                            <iframe id="add-element" class="vh-85" src="../../frmdb-apps/base-app/landing-page.html"></iframe>
+                            <iframe id="add-element" class="vh-85" src="../base-app/landing-page.html"></iframe>
                             <frmdb-highlight-box class="names-hidden">
                                 <div slot="actions-for-selected-elem">
                                     <a class="btn" onclick="this.closest('frmdb-add-element').triggerAddElementFlow()" href="javascript:void(0)" title="Choose Element"><i
