--- a/fe/src/form/form.component.html
+++ b/fe/src/form/form.component.html
@@ -1,4 +1,4 @@
-<form class="row">
+<form class="row" data-frmdb-form-autosave>
     <div class="form-group row" data-frmdb-table="props[]" data-frmdb-attr="class[col|col-1|col-2|col-3|col-4|col-5|col-6|col-7|col-8|col-9|col-10|col-11|col-12]::props[].cssWidth">
         <label data-frmdb-attr="for::props[].name" class="col-form-label col-3" data-frmdb-value="::props[].nameI18n"></label>
         <div class="col-9">
