--- a/fe/src/form/form.component.html
+++ b/fe/src/form/form.component.html
@@ -2,10 +2,11 @@
     <div class="form-group row" data-frmdb-table="props[]" data-frmdb-attr="class[col|col-1|col-2|col-3|col-4|col-5|col-6|col-7|col-8|col-9|col-10|col-11|col-12]::props[].cssWidth">
         <label data-frmdb-attr="for::props[].name" class="col-form-label col-3" data-frmdb-value="::props[].nameI18n"></label>
         <div class="col-9">
-            <input type="text" class="form-control" 
+            <input class="form-control" 
                 data-frmdb-value=":dataObj:props[].name" 
                 data-frmdb-attr="name::props[].name" 
                 data-frmdb-attr2="!disabled::props[].disabled"
+                data-frmdb-attr3="type::props[].inputType"
                 data-frmdb-attr4="data-frmdb-target-field:props[].name"
                 />
             <frmdb-autocomplete data-frmdb-if="props[].isAutocomplete" 
