fix express routing for allowed auth

--- a/fe/src/table-editor/table-editor.component.html
+++ b/fe/src/table-editor/table-editor.component.html
@@ -6,7 +6,7 @@
         <a href="javascript:void(0)" id="add-column-to-table-btn" class="dropdown-item"><i class="frmdb-i-plus-square"></i> Add Column</a>
         <div class="dropdown-divider"></div>
         <a href="javascript:void(0)" id="add-row-btn" class="dropdown-item add-row "><i class="frmdb-i-plus-circle"></i> Add Row</a>
-        <a href="javascript:void(0)" id="clone-row-btn" class="dropdown-item clone-row "><i class="frmdb-i-clone"></i> Clone Row</a>
+        <!-- <a href="javascript:void(0)" id="clone-row-btn" class="dropdown-item clone-row "><i class="frmdb-i-clone"></i> Clone Row</a> -->
         <a href="javascript:void(0)" id="delete-row-btn" class="dropdown-item delete-row "><i class="frmdb-i-trash"></i> Delete Row</a>
         <div class="dropdown-divider"></div>
         <a href="javascript:void(0)" id="export-excel-btn" class="dropdown-item excel-export "><i class="frmdb-i-file-excel"></i> Export Excel</a>
