--- a/themes/frmdb/utilities/_display.scss
+++ b/themes/frmdb/utilities/_display.scss
@@ -21,3 +21,15 @@
         }
     }
 }
+
+@each $x in (1, 2, 3, 4, 5, 6) {
+    @each $y in (1, 2, 3, 4, 5, 6) {
+        @each $w in (1, 2, 3, 4, 5, 6) {
+            @each $h in (1, 2, 3, 4, 5, 6) {
+                .grid-#{$x}-#{$y}-#{$w}-#{$h} {
+                    grid-area: #{$y} / #{$x} / #{$y + $h} / #{$x + $w} ;
+                }
+            }
+        }
+    }
+}
