--- a/fe/src/highlight/highlight.component.html
+++ b/fe/src/highlight/highlight.component.html
@@ -1,6 +1,9 @@
 <div class="actions top">
     <slot name="actions-top"></slot>
 </div>
+<div class="actions top-right">
+    <slot name="actions-top-right"></slot>
+</div>
 <div class="actions left">
     <slot name="actions-left"></slot>
 </div>
