--- a/fe/src/highlight/highlight.component.scss
+++ b/fe/src/highlight/highlight.component.scss
@@ -4,10 +4,13 @@
 
 :host(.is-at-top) {
     .actions.top { 
-        transform: translateX(10px) translateY(0%); 
+        transform: translateX(12px) translateY(0%); 
+    }
+    .actions.top-right { 
+        transform: translateX(8px) translateY(0%); 
     }
     .actions.left { 
-        transform: translateX(calc(min(-25%,-10px))) translateY(calc(max(25%,10px))); 
+        transform: translateX(calc(min(-25%,-12px))) translateY(calc(max(25%,12px))); 
     }
 }
 
@@ -23,9 +26,15 @@
         display: flex;
         flex-wrap: nowrap;
 
+        &.top-right {
+            top: 0;
+            transform: translateX(8px) translateY(-100%);
+            right: 0;
+            justify-content: right;
+        }
         &.top {
             top: 0;
-            transform: translateX(10px) translateY(-100%);
+            transform: translateX(12px) translateY(-100%);
             left: 0;
             justify-content: left;
         }
