--- a/themes/frmdb/_mixins.scss
+++ b/themes/frmdb/_mixins.scss
@@ -1,13 +1,39 @@
 @mixin frmdb-section-dark-mixin($bgColor) {
-    
-    &, h1, h2, h3, h4, h5, h6, p {
+    &,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    p {
         color: color-yiq($bgColor);
     }
 
-    .input-group-text, input, .form-control:focus {
+    .input-group-text,
+    input,
+    textarea,
+    select,
+    .form-control:focus {
         // background-color: $dark;
         color: color-yiq($bgColor);
     }
+
+    // input:-webkit-autofill,
+    // input:-webkit-autofill:hover,
+    // input:-webkit-autofill:focus,
+    // textarea:-webkit-autofill,
+    // textarea:-webkit-autofill:hover,
+    // textarea:-webkit-autofill:focus,
+    // select:-webkit-autofill,
+    // select:-webkit-autofill:hover,
+    // select:-webkit-autofill:focus {
+    //     // border: 1px solid green;
+    //     // -webkit-text-fill-color: green;
+    //     // -webkit-box-shadow: 0 0 0px 1000px #000 inset;
+    //     // transition: background-color 5000s ease-in-out 0s;
+    //     background-color: lighten($bgColor, 15%) !important;
+    // }
 
     .input-group {
         border: 1px solid $gray-600;
