--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -11,7 +11,7 @@
 </frmdb-highlight>
 
 <frmdb-highlight id="selected-box" class="box">
-    <div slot="actions-top">
+    <!-- <div slot="actions-top">
         <slot name="actions-for-selected-elem"></slot>
-    </div>
+    </div> -->
 </frmdb-highlight>
