--- a/themes/frmdb/_frmdb.scss
+++ b/themes/frmdb/_frmdb.scss
@@ -30,10 +30,11 @@ body {
 }
 
 .frmdb-hidden {
-    height: 7px;
-    font-size: 7px;
-    border: 0;
-    color: #eeeeee;
+    height: 10px;
+    font-size: 10px;
+    border: 1px solid #e9e9e9;
+    border-radius: 4px;
+    color: #e9e9e9;
     visibility: hidden;
 }
 .frmdb-editor-on.frmdb-editor-normal .frmdb-hidden {
