--- a/fe/src/frmdb-editor/img-editor.component.html
+++ b/fe/src/frmdb-editor/img-editor.component.html
@@ -10,7 +10,7 @@
             <div class="modal-body vh-90 overflow-hidden mb-4">
                 <nav>
                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                        <a class="nav-item nav-link active" data-toggle="tab" href="#Uploaded_Images">My Uploaded Images</a>
+                        <a class="nav-item nav-link active" data-toggle="tab" href="#Uploaded_Images">Available Images</a>
                         <a class="nav-item nav-link" data-toggle="tab" href="#Free_Public_Images">Search Free Images</a>
                         <a class="nav-item nav-link" data-toggle="tab" href="#Paid_Images">Search Premium Images</a>
                     </div>
@@ -18,6 +18,15 @@
                 <div class="tab-content h-100 overflow-auto">
                     <div class="tab-pane active" id="Uploaded_Images" role="tabpanel" aria-labelledby="home-tab">
                         <div>
+                            <div class="container">
+                                <div class="input-group mb-3">
+                                    <input id="frmdb-search-available-images" type="text" class="form-control"
+                                        placeholder="Search available images: hotels, water sports, beauty, consulting ..." />
+                                    <div class="input-group-append">
+                                        <span class="input-group-text"><i class="frmdb-i-search"></i></span>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="card-columns text-center">
                                 <a class="card border-0 d-flex flex-column text-center" data-frmdb-table="mediaObjectsUrls[]">
                                     <div>
@@ -46,7 +55,7 @@
                             </div>
                         </div>
                         <div class="card-columns">
-                            <a class="card border-0 text-center" data-frmdb-table="freeImagesUrls[]">
+                            <a class="card border-0 text-center" data-frmdb-attr2="data-frmdb-img-id::freeImagesUrls[].imgId" data-frmdb-table="freeImagesUrls[]">
                                 <img class="border rounded img-fluid" data-frmdb-value="freeImagesUrls[].webformatURL"
                                     data-frmdb-attr="alt::freeImagesUrls[].previewURL">
                                 <div class="card-img-overlay d-flex flex-column justify-content-end">
