--- a/themes/frmdb/_frmdb.scss
+++ b/themes/frmdb/_frmdb.scss
@@ -32,11 +32,15 @@ body {
 .frmdb-hidden {
     height: 10px;
     font-size: 10px;
-    border: 1px solid #e9e9e9;
+    border: 1px solid #dfdede;
     border-radius: 4px;
-    color: #e9e9e9;
+    color: #dfdede;
     visibility: hidden;
 }
 .frmdb-editor-on.frmdb-editor-normal .frmdb-hidden {
     visibility: visible;
+}
+.frmdb-hidden:hover {
+    transform: scale(2);
+    padding: 2px;
 }
